[package]
name = "yew-app"
version = "0.1.0"
edition = "2018"

[dependencies]
# you can check the latest version here: https://crates.io/crates/yew
yew = "0.19"
web-sys = "0.3.55"
yew-router = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"]  }
log = "0.4.6"
wasm-logger = "0.2.0"
futures = "0.3.19"
